<resources>
    <string name="app_name">Chemique3D</string>
    <string name="app_version">0.0.1a</string>
    <string name="app_version_long">Version 0.0.1a</string>
    <string name="app_logo">Application Logo</string>
    <string name="app_description">\u00A9 2019 \n All Rights Reserved</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Administrator</string>
    <string name="nav_header_desc">User Image</string>

    <!--Navigation Drawer Values-->
    <string name="menu_notifications">Notifications</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_help">Help</string>
    <string name="menu_about">About</string>
    <string name="menu_invite">Invite a Friend</string>
    <string name="menu_report">Report a Bug</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="accset_header">Account Settings</string>
    <string name="data_header">Background Data</string>
    <string name="graphics_header">Graphics Quality</string>
    <string name="language_header">Language Settings</string>
    <string name="notifications_header">Notification Settings</string>
    <string name="sv_header">Sounds and Vibration</string>
    <string name="theme_header">Theme Settings</string>

    <!-- Preference Summary -->
    <string name="accset_summary">Manage your account</string>
    <string name="data_summary">Manage background data usage</string>
    <string name="graphics_summary">Manage graphics quality</string>
    <string name="language_summary">Manage application language</string>
    <string name="notifications_summary">Manage notification settings</string>
    <string name="sv_summary">Manage sounds and vibration settings</string>
    <string name="theme_summary">Manage the app theme</string>

    <!--&lt;!&ndash; Messages Preferences &ndash;&gt;-->
    <!--<string name="signature_title">Your signature</string>-->
    <!--<string name="reply_title">Default reply action</string>-->

    <!--&lt;!&ndash; Sync Preferences &ndash;&gt;-->
    <!--<string name="sync_title">Sync email periodically</string>-->
    <!--<string name="attachment_title">Download incoming attachments</string>-->
    <!--<string name="attachment_summary_on">Automatically download attachments for incoming emails-->
    <!--</string>-->
    <!--<string name="attachment_summary_off">Only download attachments when manually requested</string>-->
</resources>