<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item
        android:id="@+id/nav_notifications"
        android:icon="@drawable/ic_menu_notifications"
        android:title="@string/menu_notifications" />

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_menu_settings"
        android:title="@string/menu_settings" />

    <item
        android:id="@+id/nav_help"
        android:icon="@drawable/ic_menu_help"
        android:title="@string/menu_help" />

    <item
        android:id="@+id/nav_about"
        android:icon="@drawable/ic_menu_about"
        android:title="@string/menu_about" />

    <item
        android:id="@+id/nav_invite"
        android:icon="@drawable/ic_menu_invite"
        android:title="@string/menu_invite" />

    <item
        android:id="@+id/nav_report"
        android:icon="@drawable/ic_menu_report"
        android:title="@string/menu_report" />

</menu>