<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".UI.About">

    <TextView
        android:id="@+id/appName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/textColourPrimary"
        android:textSize="@dimen/about_title_font_size" />

    <TextView
        android:id="@+id/appVersion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_version_long"
        android:textAlignment="center"
        android:textColor="@color/textColourPrimary"
        android:textSize="@dimen/about_subtitle_font_size" />

    <ImageView
        android:id="@+id/appLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_logo"
        android:paddingTop="@dimen/logo_horizontal_margin"
        android:paddingBottom="@dimen/logo_horizontal_margin"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/appDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_description"
        android:textAlignment="center"
        android:textColor="@color/textColourPrimary"
        android:textSize="@dimen/about_subtitle_font_size" />

</LinearLayout>